--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@ng-bootstrap/ng-bootstrap": "4.1.0",
     "@types/chart.js": "^2.7.52",
     "chart.js": "2.7.3",
-    "chartjs-plugin-datalabels": "0.6.0",
+    "chartjs-plugin-datalabels": "^0.6.0",
     "chartjs-plugin-deferred": "1.0.1",
     "core-js": "2.6.5",
     "hammerjs": "2.0.8",
@@ -46,7 +46,7 @@
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
