--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@angular/router": "7.2.8",
     "@ng-bootstrap/ng-bootstrap": "4.1.0",
     "@types/chart.js": "^2.7.52",
-    "chart.js": "2.8.0",
+    "chart.js": "^2.8.0",
     "chartjs-plugin-datalabels": "^0.6.0",
     "chartjs-plugin-deferred": "1.0.1",
     "core-js": "2.6.5",
