--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hammerjs": "2.0.8",
     "igniteui-angular": "7.2.6",
     "jquery": "^3.4.1",
+    "node-stream-zip": "^1.8.0",
     "rxjs": "6.4.0",
     "rxjs-compat": "^6.5.1",
     "web-animations-js": "2.3.1",
