--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/gsap": "^1.20.2",
     "@types/jquery": "^3.3.29",
     "ajv": "^6.10.0",
+    "angular-font-awesome": "^3.1.2",
     "chart.js": "^2.8.0",
     "chartjs-plugin-datalabels": "^0.6.0",
     "chartjs-plugin-deferred": "1.0.1",
     "core-js": "2.6.5",
+    "font-awesome": "^4.7.0",
     "gsap": "^2.1.3",
     "hammerjs": "2.0.8",
     "igniteui-angular": "7.2.6",
