--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "chartjs-plugin-datalabels": "^0.6.0",
     "chartjs-plugin-deferred": "1.0.1",
     "core-js": "2.6.5",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "gsap": "^2.1.3",
     "hammerjs": "2.0.8",
     "igniteui-angular": "7.2.6",
     "jquery": "^3.4.1",
     "node-stream-zip": "^1.8.0",
+    "prerender": "^5.6.0",
+    "prerender-node": "^3.2.4",
     "rxjs": "6.4.0",
     "rxjs-compat": "^6.5.1",
     "web-animations-js": "2.3.1",
