--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "@angular/compiler": "^7.2.15",
     "@angular/core": "7.2.8",
     "@angular/forms": "7.2.8",
+    "@angular/http": "^7.2.15",
     "@angular/material": "7.3.4",
     "@angular/platform-browser": "7.2.8",
     "@angular/platform-browser-dynamic": "7.2.8",
+    "@angular/platform-server": "7.2.8",
     "@angular/router": "7.2.8",
     "@ng-bootstrap/ng-bootstrap": "4.1.0",
+    "@nguniversal/express-engine": "^7.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "0.0.0",
     "@types/chart.js": "^2.7.52",
     "@types/gsap": "^1.20.2",
     "@types/jquery": "^3.3.29",
@@ -43,7 +47,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:ssr": "node dist/server",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
+    "build:client-and-server-bundles": "ng build --prod && ng run demo:server:production"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
@@ -63,8 +71,11 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "ts-loader": "^5.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
-  }
+    "typescript": "~3.1.1",
+    "webpack-cli": "^3.1.0"
+  },
+
 }
