--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hammerjs": "2.0.8",
     "igniteui-angular": "7.2.6",
     "jquery": "^3.4.1",
+    "ngx-device-detector": "^1.3.9",
     "node-stream-zip": "^1.8.0",
     "prerender": "^5.6.0",
     "prerender-node": "^3.2.4",
