--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1",
+    "webpack": "^4.38.0",
     "webpack-cli": "^3.1.0"
   }
 }
