--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@angular/cdk": "7.3.4",
     "@angular/common": "7.2.8",
     "@angular/compiler": "^7.2.15",
-    "@angular/core": "^7.2.8",
+    "@angular/core": "7.2.8",
     "@angular/forms": "7.2.8",
     "@angular/http": "^7.2.15",
     "@angular/material": "7.3.4",
     "@angular/platform-browser": "7.2.8",
     "@angular/platform-browser-dynamic": "7.2.8",
-    "@angular/platform-server": "^7.2.8",
+    "@angular/platform-server": "7.2.8",
     "@angular/router": "7.2.8",
     "@ng-bootstrap/ng-bootstrap": "4.1.0",
     "@nguniversal/express-engine": "^7.1.1",
@@ -40,6 +40,7 @@
     "rxjs": "6.4.0",
     "rxjs-compat": "^6.5.1",
     "web-animations-js": "2.3.1",
+    "webpack": "^4.39.1",
     "zone.js": "0.8.29"
   },
   "scripts": {
@@ -76,7 +77,6 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1",
-    "webpack": "^4.38.0",
     "webpack-cli": "^3.1.0"
   }
 }
